--- a/src/main/asciidoc/migrating.adoc
+++ b/src/main/asciidoc/migrating.adoc
@@ -18,6 +18,19 @@ The new SDK still has an environment that is used to configure it, so you can ov
 
 For more information, see <<couchbase.configuration>>.
 
+[[couchbase.migrating.entities]]
+== Entities
+How to deal with entities has not changed, although since the SDK now does not ship annotations anymore only Spring-Data related annotations are supported.
+
+Specifically:
+
+ - `com.couchbase.client.java.repository.annotation.Id` became `import org.springframework.data.annotation.Id`
+ - `com.couchbase.client.java.repository.annotation.Field` became `import org.springframework.data.couchbase.core.mapping.Field`
+
+The `org.springframework.data.couchbase.core.mapping.Document` annotation stayed the same.
+
+For more information, see <<couchbase.entity>>.
+
 [[couchbase.migrating.template]]
 == Template and ReactiveTemplate
 
