--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,11 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 3.1.17.RELEASE (2020-04-28)
+----------------------------------------------
+* DATACOUCH-507 - Release 3.1.17 (Lovelace SR17).
+
+
 Changes in version 4.0.0.RC1 (2020-03-31)
 -----------------------------------------
 * DATACOUCH-512 - Release 4.0 RC1 (Neumann).
@@ -1017,6 +1022,7 @@ Release Notes - Spring Data Couchbase - Version 1.0 M1 - 2013-09-11
     * [DATACOUCH-8] - Overhaul README with uptodate information
     * [DATACOUCH-9] - Add View query support to the Template
     * [DATACOUCH-10] - Upgrade parent pom to 1.1.0.RELEASE
+
 
 
 
