--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,12 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 3.2.7.RELEASE (2020-04-28)
+---------------------------------------------
+* DATACOUCH-523 - Upgrade to Couchbase Driver 2.7.14.
+* DATACOUCH-513 - Release 3.2.7 (Moore SR7).
+
+
 Changes in version 3.1.17.RELEASE (2020-04-28)
 ----------------------------------------------
 * DATACOUCH-507 - Release 3.1.17 (Lovelace SR17).
@@ -1022,6 +1028,7 @@ Release Notes - Spring Data Couchbase - Version 1.0 M1 - 2013-09-11
     * [DATACOUCH-8] - Overhaul README with uptodate information
     * [DATACOUCH-9] - Add View query support to the Template
     * [DATACOUCH-10] - Upgrade parent pom to 1.1.0.RELEASE
+
 
 
 
